--- a/Fundamentals.Tests/Fundamentals.Tests.csproj
+++ b/Fundamentals.Tests/Fundamentals.Tests.csproj
@@ -62,6 +62,7 @@
     <Compile Include="NodeTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SimpleNodeTests.cs" />
+    <Compile Include="SimpleStackTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
