--- a/Fundamentals.Tests/Fundamentals.Tests.csproj
+++ b/Fundamentals.Tests/Fundamentals.Tests.csproj
@@ -63,6 +63,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SimpleNodeTests.cs" />
     <Compile Include="SimpleStackTests.cs" />
+    <Compile Include="StringTests1_1.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
