Implemented CompressString method and some unit tests.

--- a/Fundamentals.Tests/Fundamentals.Tests.csproj
+++ b/Fundamentals.Tests/Fundamentals.Tests.csproj
@@ -64,6 +64,7 @@
     <Compile Include="SimpleNodeTests.cs" />
     <Compile Include="SimpleStackTests.cs" />
     <Compile Include="StringTests1_1.cs" />
+    <Compile Include="StringTests1_5.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
