--- a/Fundamentals.Tests/Fundamentals.Tests.csproj
+++ b/Fundamentals.Tests/Fundamentals.Tests.csproj
@@ -59,6 +59,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FibonacciTests.cs" />
     <Compile Include="NodeTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SimpleNodeTests.cs" />
