Implemented function to test a string to see if it's a palindrome.

--- a/Fundamentals.Tests/Fundamentals.Tests.csproj
+++ b/Fundamentals.Tests/Fundamentals.Tests.csproj
@@ -61,6 +61,7 @@
   <ItemGroup>
     <Compile Include="FibonacciTests.cs" />
     <Compile Include="NodeTests.cs" />
+    <Compile Include="PalindromeTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SimpleNodeTests.cs" />
     <Compile Include="SimpleStackTests.cs" />
